--- a/index.html
+++ b/index.html
@@ -5,6 +5,193 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
-  <body></body>
+  <body class="body">
+    <header class="header">
+      <ul class="header__links-list">
+        <li class="header__links-list-item header__links-list-item_no-bullit">
+          <a href="" class="header__link header__link_active">главная</a>
+        </li>
+        <li class="header__links-list-item">
+          <a href="" class="header__link">посмотреть лоты</a>
+        </li>
+        <li class="header__links-list-item">
+          <a href="" class="header__link">об аукционе</a>
+        </li>
+      </ul>
+      <a class="header__logo">
+        <img
+          class="header__logo-image"
+          src="./images/logo-black.svg"
+          alt="ono-tebe-nado"
+        />
+      </a>
+
+      <div class="address">
+        <a class="address__link" href="tel:+99995555555">+9 999 555 5555</a
+        ><br />
+        <a class="address__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <address class="address__text">
+          наб. Принсенграхт 263-265, <br />Амстердам
+        </address>
+      </div>
+    </header>
+    <main>
+      <section class="cover">
+        <div class="overlay"></div>
+        <h1 class="cover__title">
+          <span class="aligned-text"
+            >Он<span class="letter-spacing-extended">о</span></span
+          ><span class="aligned-text aligned-text_center"
+            >теб<span class="letter-spacing-extended">е</span></span
+          ><span class="aligned-text aligned-text_right"
+            >н<span class="letter-spacing-extended">адо</span></span
+          >
+        </h1>
+        <div class="cover__description">
+          <h2 class="cover__description-text">
+            <span class="cover__word-spacing-left"
+              >Аукцион вещей, в которые никто</span
+            >
+            <span class="cover__word-spacing-right">не верил</span>
+          </h2>
+          <button class="bet-button">Сделать ставку</button>
+        </div>
+      </section>
+      <section class="lots">
+        <h2 class="lots__title">лоты</h2>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item">
+            <a href="" class="card-link">
+              <article class="card card_type_film">
+                <div class="overlay"></div>
+                <h3 class="card__title">
+                  Фильм режиссёра, который бросил киношколу
+                </h3>
+                <p class="card__text">
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                  ставка, если бы вы не знали, что режиссёр — Пол Томас
+                  Андерсон?
+                </p>
+              </article>
+            </a>
+          </li>
+
+          <li class="lots__card-list-item">
+            <a href="" class="card-link">
+              <article class="card card_type_book">
+                <div class="overlay"></div>
+                <h3 class="card__title">
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h3>
+                <p class="card__text">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
+                  с переходами на древнеанглийский. В ней одновременно
+                  рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                  Джеймса Джойса?
+                </p>
+              </article>
+            </a>
+          </li>
+
+          <li class="lots__card-list-item">
+            <a href="" class="card-link">
+              <article class="card card_type_picture">
+                <div class="overlay"></div>
+                <h3 class="card__title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h3>
+                <p class="card__text">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                  котиков… Сколько бы вы на такое поставили, если бы не знали,
+                  что это — одна из революционных работ Кандинского?
+                </p>
+              </article>
+            </a>
+          </li>
+
+          <a href="" class="lots__look-more-link">посмотреть больше</a>
+        </ul>
+      </section>
+      <section class="about">
+        <div class="about__column-logo">
+          <div class="about__logo">
+            <img
+              class="about__logo-image"
+              src="./images/logo-white.svg"
+              alt="logo-white"
+            />
+          </div>
+        </div>
+        <div class="about__column-text">
+          <h2 class="about__title">Об аукционе</h2>
+          <p class="about__text">
+            Здесь вы не встретите очередное пафосное собрание невероятно
+            дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
+            один аукцион. Потому что кому нужен дневник девочки-подростка или
+            картина, которую может нарисовать даже ребёнок? Кому нужны все эти
+            странные вещи, созданные любителями?
+          </p>
+          <p class="about__text">
+            Слишком сложные или, наоборот, слишком простые. Опережающие своё
+            время. В пух и прах растерзанные критиками. Непринятые и непонятые.
+            Когда-то они казались просто неудачными. Но, несмотря на критику,
+            кажущуюся простоту или сложность, сейчас без этих лотов невозможно
+            представить современную культуру. Когда в эти вещи не верил никто,
+            продолжали верить их создатели. И сейчас эти лоты стали культовыми.
+          </p>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="address footer__address">
+        <a class="address__link" href="tel:+99995555555">+9 999 555 5555</a
+        ><br />
+        <a class="address__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <address class="address__text">
+          наб. Принсенграхт 263-265, <br />Амстердам
+        </address>
+      </div>
+
+      <nav class="footer__menu">
+        <ul class="footer__menu-list">
+          <li class="footer__menu-list-item">
+            <a href="" class="footer__menu-link footer__menu-link_active"
+              >главная</a
+            >
+          </li>
+          <li class="footer__menu-list-item">
+            <a href="" class="footer__menu-link">посмотреть лоты</a>
+          </li>
+          <li class="footer__menu-list-item">
+            <a href="" class="footer__menu-link">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+
+      <div class="footer__social-list">
+        <a href="" class="footer__social-link">
+          <img src="./images/yt.svg" class="footer__social-icon" alt="yt" />
+        </a>
+
+        <a href="" class="footer__social-link">
+          <img src="./images/vk.svg" class="footer__social-icon" alt="vk" />
+        </a>
+
+        <a href="" class="footer__social-link">
+          <img
+            src="./images/pinterest.svg"
+            class="footer__social-icon"
+            alt="pinterest"
+          />
+        </a>
+      </div>
+    </footer>
+  </body>
 </html>
