--- a/index.html
+++ b/index.html
@@ -42,15 +42,20 @@
     <main>
       <section class="cover">
         <div class="overlay"></div>
+
         <h1 class="cover__title">
           <span class="aligned-text"
-            >Он<span class="letter-spacing-extended">о</span></span
+            >О<span class="letter-spacing-extended">но</span> </span
           ><span class="aligned-text aligned-text_center"
-            >теб<span class="letter-spacing-extended">е</span></span
+            >те<span class="letter-spacing-extended">бе</span></span
           ><span class="aligned-text aligned-text_right"
-            >н<span class="letter-spacing-extended">адо</span></span
+            ><span class="letter-spacing-extended">н</span>ад<span
+              class="no-letter-spacing"
+              >о</span
+            ></span
           >
         </h1>
+
         <div class="cover__description">
           <h2 class="cover__description-text">
             <span class="cover__word-spacing-left"
