--- a/index.html
+++ b/index.html
@@ -11,31 +11,33 @@
   </head>
   <body class="body">
     <header class="header">
-      <ul class="header__links-list">
-        <li class="header__links-list-item header__links-list-item_no-bullit">
-          <a href="" class="header__link header__link_active">главная</a>
-        </li>
-        <li class="header__links-list-item">
-          <a href="" class="header__link">посмотреть лоты</a>
-        </li>
-        <li class="header__links-list-item">
-          <a href="" class="header__link">об аукционе</a>
-        </li>
-      </ul>
+      <nav class="header__menu">
+        <ul class="header__links-list">
+          <li class="header__links-list-item header__links-list-item_no-bullit">
+            <a href="" class="header__link header__link_active">главная</a>
+          </li>
+          <li class="header__links-list-item">
+            <a href="" class="header__link">посмотреть лоты</a>
+          </li>
+          <li class="header__links-list-item">
+            <a href="" class="header__link">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
       <a class="header__logo">
         <img
           class="header__logo-image"
           src="./images/logo-black.svg"
-          alt="ono-tebe-nado"
+          alt="Оно-тебе-надо"
         />
       </a>
-
-      <div class="address">
-        <a class="address__link" href="tel:+99995555555">+9 999 555 5555</a
-        ><br />
-        <a class="address__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <address class="address__text">
-          наб. Принсенграхт 263-265, <br />Амстердам
+      <div class="header__address">
+        <address class="address">
+          <a class="address__link" href="tel:+99995555555">+9 999 555 5555</a>
+          <a class="address__link" href="mailto:info@sobaka.ge"
+            >info@sobaka.ge</a
+          >
+          <p class="address__text">наб. Принсенграхт 263-265, Амстердам</p>
         </address>
       </div>
     </header>
@@ -57,15 +59,16 @@
         </h1>
 
         <div class="cover__description">
-          <h2 class="cover__description-text">
-            <span class="cover__word-spacing-left"
+          <p class="cover__description-text">
+            <span class="word-spacing-normal"
               >Аукцион вещей, в которые никто</span
             >
-            <span class="cover__word-spacing-right">не верил</span>
-          </h2>
-          <button class="bet-button">Сделать ставку</button>
+            <span class="word-spacing-extended">не верил</span>
+          </p>
+          <button class="bet-button" type="button">Сделать ставку</button>
         </div>
       </section>
+
       <section class="lots">
         <h2 class="lots__title">лоты</h2>
         <ul class="lots__card-list">
@@ -129,7 +132,7 @@
             <img
               class="about__logo-image"
               src="./images/logo-white.svg"
-              alt="logo-white"
+              alt="Логотип"
             />
           </div>
         </div>
@@ -154,12 +157,16 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="address footer__address">
-        <a class="address__link" href="tel:+99995555555">+9 999 555 5555</a
-        ><br />
-        <a class="address__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <address class="address__text">
-          наб. Принсенграхт 263-265, <br />Амстердам
+      <div class="footer__address">
+        <address class="address">
+          <a class="address__link" href="tel:+99995555555">+9 999 555 5555</a
+          ><br />
+          <a class="address__link" href="mailto:info@sobaka.ge"
+            >info@sobaka.ge</a
+          >
+          <p class="address__text">
+            наб. Принсенграхт 263-265, <br />Амстердам
+          </p>
         </address>
       </div>
 
@@ -181,18 +188,18 @@
 
       <div class="footer__social-list">
         <a href="" class="footer__social-link">
-          <img src="./images/yt.svg" class="footer__social-icon" alt="yt" />
+          <img src="./images/yt.svg" class="footer__social-icon" alt="Ютуб" />
         </a>
 
         <a href="" class="footer__social-link">
-          <img src="./images/vk.svg" class="footer__social-icon" alt="vk" />
+          <img src="./images/vk.svg" class="footer__social-icon" alt="вк" />
         </a>
 
         <a href="" class="footer__social-link">
           <img
             src="./images/pinterest.svg"
             class="footer__social-icon"
-            alt="pinterest"
+            alt="Пинтерест"
           />
         </a>
       </div>
