Исправлены рекомендательные ошибки

--- a/index.html
+++ b/index.html
@@ -187,15 +187,15 @@
       </nav>
 
       <div class="footer__social-list">
-        <a href="" class="footer__social-link">
+        <a target="_blank" href="" class="footer__social-link">
           <img src="./images/yt.svg" class="footer__social-icon" alt="Ютуб" />
         </a>
 
-        <a href="" class="footer__social-link">
+        <a target="_blank" href="" class="footer__social-link">
           <img src="./images/vk.svg" class="footer__social-icon" alt="вк" />
         </a>
 
-        <a href="" class="footer__social-link">
+        <a target="_blank" href="" class="footer__social-link">
           <img
             src="./images/pinterest.svg"
             class="footer__social-icon"
