Исправлены ошибки: в address и <br/>

--- a/index.html
+++ b/index.html
@@ -164,9 +164,7 @@
           <a class="address__link" href="mailto:info@sobaka.ge"
             >info@sobaka.ge</a
           >
-          <p class="address__text">
-            наб. Принсенграхт 263-265, <br />Амстердам
-          </p>
+          <p class="address__text">наб. Принсенграхт 263-265, Амстердам</p>
         </address>
       </div>
 
